src/k8s/platform/storage/seaweedfs-filer-ingress/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: seaweedfs-filer-https-redirect
  namespace: seaweedfs
spec:
  redirectScheme:
    scheme: https
    permanent: true
